// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox applies label position prop 1`] = `
<View
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "column",
        "padding": 8,
      },
      undefined,
    ]
  }
  testID="checkboxTestID"
>
  <Image
    accessibilityRole="image"
    accessible={true}
    source={
      {
        "testUri": "../../../packages/react-native/src/assets/icons/checkboxOutline.png",
      }
    }
    style={
      [
        {
          "height": 24,
          "resizeMode": "contain",
          "tintColor": undefined,
          "width": 24,
        },
        undefined,
      ]
    }
  />
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        undefined,
      ]
    }
  >
    test
  </Text>
</View>
`;

exports[`Checkbox applies theme and style props 1`] = `
<View
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 8,
      },
      {
        "padding": 10,
      },
    ]
  }
  testID="checkboxTestID"
>
  <Image
    accessibilityRole="image"
    accessible={true}
    source={
      {
        "testUri": "../../../packages/react-native/src/assets/icons/checkboxOutline.png",
      }
    }
    style={
      [
        {
          "height": 24,
          "resizeMode": "contain",
          "tintColor": undefined,
          "width": 24,
        },
        {},
      ]
    }
  />
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        {},
      ]
    }
  >
    test
  </Text>
</View>
`;

exports[`Checkbox renders as expected when disabled 1`] = `
<View
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "opacity": 0.6,
        "padding": 8,
      },
      undefined,
    ]
  }
  testID="checkboxTestID"
>
  <Image
    accessibilityRole="image"
    accessible={true}
    source={
      {
        "testUri": "../../../packages/react-native/src/assets/icons/checkboxOutline.png",
      }
    }
    style={
      [
        {
          "height": 24,
          "resizeMode": "contain",
          "tintColor": undefined,
          "width": 24,
        },
        undefined,
      ]
    }
  />
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        undefined,
      ]
    }
  >
    test
  </Text>
</View>
`;

exports[`Checkbox renders as expected when passing a number to the size prop 1`] = `
<View
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 8,
      },
      undefined,
    ]
  }
  testID="checkboxTestID"
>
  <Image
    accessibilityRole="image"
    accessible={true}
    source={
      {
        "testUri": "../../../packages/react-native/src/assets/icons/checkboxOutline.png",
      }
    }
    style={
      [
        {
          "height": 42,
          "resizeMode": "contain",
          "tintColor": undefined,
          "width": 42,
        },
        undefined,
      ]
    }
  />
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        undefined,
      ]
    }
  >
    test
  </Text>
</View>
`;

exports[`Checkbox renders as expected when selected is false 1`] = `
<View
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 8,
      },
      undefined,
    ]
  }
  testID="checkboxTestID"
>
  <Image
    accessibilityRole="image"
    accessible={true}
    source={
      {
        "testUri": "../../../packages/react-native/src/assets/icons/checkboxOutline.png",
      }
    }
    style={
      [
        {
          "height": 24,
          "resizeMode": "contain",
          "tintColor": undefined,
          "width": 24,
        },
        undefined,
      ]
    }
  />
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        undefined,
      ]
    }
  >
    test
  </Text>
</View>
`;

exports[`Checkbox renders as expected when selected is true 1`] = `
<View
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 8,
      },
      undefined,
    ]
  }
  testID="checkboxTestID"
>
  <Image
    accessibilityRole="image"
    accessible={true}
    source={
      {
        "testUri": "../../../packages/react-native/src/assets/icons/checkboxFilled.png",
      }
    }
    style={
      [
        {
          "height": 24,
          "resizeMode": "contain",
          "tintColor": undefined,
          "width": 24,
        },
        undefined,
      ]
    }
  />
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        undefined,
      ]
    }
  >
    test
  </Text>
</View>
`;

exports[`Checkbox renders as expected with custom accessibilityRole 1`] = `
<View
  accessibilityRole="none"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 8,
      },
      undefined,
    ]
  }
  testID="checkboxTestID"
>
  <Image
    accessibilityRole="image"
    accessible={true}
    source={
      {
        "testUri": "../../../packages/react-native/src/assets/icons/checkboxOutline.png",
      }
    }
    style={
      [
        {
          "height": 24,
          "resizeMode": "contain",
          "tintColor": undefined,
          "width": 24,
        },
        undefined,
      ]
    }
  />
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        {
          "color": "hsl(210, 50%, 10%)",
        },
        undefined,
      ]
    }
  >
    test
  </Text>
</View>
`;

exports[`Checkbox renders as expected without a label 1`] = `
<View
  accessibilityRole="checkbox"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "padding": 8,
      },
      undefined,
    ]
  }
  testID="checkboxTestID"
>
  <Image
    accessibilityRole="image"
    accessible={true}
    source={
      {
        "testUri": "../../../packages/react-native/src/assets/icons/checkboxOutline.png",
      }
    }
    style={
      [
        {
          "height": 24,
          "resizeMode": "contain",
          "tintColor": undefined,
          "width": 24,
        },
        undefined,
      ]
    }
  />
</View>
`;
